# Solana-Frontier-Hackathon

./: .gitignore  Anchor.toml  Cargo.toml  README-contract.md  README.md  README_CN.md  package-lock.json  package.json  presentation.html  tailwind.config.ts
components/: AddressDisplay.tsx  BorrowForm.tsx  BorrowerCostPanel.tsx  CollateralRiskTable.tsx  ConnectWalletButton.tsx  CurrentLoanSummary.tsx  DemoScenarioControls.tsx  Layout.tsx  LenderDecisionPanel.tsx  LoanCard.tsx  LoanEconomicsPanel.tsx  MetricCard.tsx  NextStepGuide.tsx  OnChainPanel.tsx  ProfitLedgerBoard.tsx  ProtocolFlow.tsx  RepaymentProgress.tsx  RiskFactorPanel.tsx  RiskPanel.tsx  SettlementSummary.tsx  VaultFlowDiagram.tsx  VaultTradingPanel.tsx  Web3StatusPanel.tsx  YieldChart.tsx  ZKProofCard.tsx
lib/: LoanContext.tsx  anchor-client.ts  auth.ts  deepseek.ts  mock.ts  types.ts  useOnChainVault.ts  useWalletAuth.ts  wallet.tsx  zk.ts
lib/idl/: credit_vault.ts
pages/: _app.tsx  borrow.tsx  dashboard.tsx  figma-flow.tsx  lend.tsx  repay.tsx  risk-admin.tsx  vault.tsx
pages/api/: borrow.ts  keeper.ts  lend.ts  risk.ts  vault-fund.ts  vault-init.ts  vault-liquidate.ts  vault-state.ts  vault-withdraw.ts  vault-yield.ts  yield.ts  zk-proof.ts  zk-verify.ts
programs/credit_vault/: Cargo.toml
programs/credit_vault/src/: errors.rs  lib.rs  state.rs
scripts/: deploy.ps1  init-protocol.cjs  init-protocol.mjs  init-protocol.ts  test-anchor.cjs
styles/: globals.css
zk/circuits/: risk_check.circom
zk/scripts/: setup.sh
