[package]
name = "credit-vault"
version = "0.1.0"
description = "Solana DeFi Credit Vault - AI Risk + ZK Privacy + Controlled Funds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credit_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
